--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <h1>Discover hidden places in the world around you</h1>
         <a href="#">Download Excursion (coming soon!)</a>
       </header>
+      <main>
+        <img src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4" alt="video of the app on a phone">
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remenbers places you like, and recommends new points of interest around you.</p>
+        <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="pictures of camp">
+        <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="icon of phone">
+      </main>
 
     </body>
 </html>
