--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="pictures of camp">
         <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="icon of phone">
       </main>
+      <footer>
+        <h3>Coming soon for ¡Phone and Android</h3>
+        <a href="#">Download Excursion (coming soon!)</a>
+      </footer>
 
     </body>
 </html>
