--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#">Download Excursion (coming soon!)</a>
       </header>
       <main>
-        <img src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4" alt="video of the app on a phone">
+        <video src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4"></video>        
         <h2>Your personal travel guide</h2>
         <p>Excursion remenbers places you like, and recommends new points of interest around you.</p>
         <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="pictures of camp">
