--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
         <a href="#">Download Excursion (coming soon!)</a>
       </header>
       <main>
-        <video src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4"></video>        
+        <video autoplay muted>
+          <source src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4">
+        </video>        
         <h2>Your personal travel guide</h2>
         <p>Excursion remenbers places you like, and recommends new points of interest around you.</p>
         <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="pictures of camp">
         <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="icon of phone">
       </main>
       <footer>
-        <h3>Coming soon for ¡Phone and Android</h3>
+        <h3>Coming soon for iPhone and Android</h3>
         <a href="#">Download Excursion (coming soon!)</a>
       </footer>
 
